force-app/main/default/objects/Engagement__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determines whether this engagement is selectable for the related user</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>