force-app/main/default/objects/Engagement__c/fields/End__c.field-meta.xml
<CustomField>
    <fullName>End__c</fullName>
    <description>The end date of the engagement for the related user. After this date the user will not be able to select the engagement. If blank then no end date will be assumed.</description>
    <label>End</label>
    <type>Date</type>
</CustomField>