force-app/main/default/objects/Engagement__c/fields/Start__c.field-meta.xml
<CustomField>
    <fullName>Start__c</fullName>
    <description>The start date for the engagement. Before this date the engagement can not be selected by the user.</description>
    <label>Start</label>
    <required>true</required>
    <type>Date</type>
</CustomField>