force-app/main/default/objects/Engagement__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user related to this engagement</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>