force-app/main/default/objects/Engagement__c/validationRules/User_must_be_completed.validationRule-meta.xml
<ValidationRule>
    <fullName>User_must_be_completed</fullName>
    <active>true</active>
    <errorConditionFormula>User__c == &#39;&#39;</errorConditionFormula>
    <errorDisplayField>User__c</errorDisplayField>
    <errorMessage>User must be completed</errorMessage>
</ValidationRule>